Twenty Nineteen: Fix Content Options post details alignment. Fixes #10511 (#10516)
Add a class to the body when visiting the customizer and  change the display property of the span elements to `inline`.

--- a/modules/theme-tools/compat/twentynineteen.css
+++ b/modules/theme-tools/compat/twentynineteen.css
@@ -293,3 +293,10 @@
 	}
 }
 
+/**
+ * Content Options
+ */
+.twentynineteen-customizer .entry .entry-meta > span,
+.twentynineteen-customizer .entry .entry-footer > span {
+	display: inline;
+}
